# Splines

./: .gitignore  CMakeLists.txt  README.md
assignments/: CMakeLists.txt
assignments/a0-start/: CMakeLists.txt
assignments/a0-start/2d/: greenSphere2d.cpp  redCube2d.cpp
assignments/a0-start/3d/: greenSphere3d.cpp  redCube3d.cpp
assignments/a1-hello/: CMakeLists.txt  Readme.md  bonus.cpp  circle.cpp  circles.cpp  eyes.cpp  look.cpp  out.ogv  particle.cpp  velocity.cpp
assignments/a10-physics/: ABehaviorViewer.cpp  ABehaviorViewer.h  ABehaviors.cpp  ABehaviors.h  ABoxSim1.cpp  ABoxSim2.cpp  ABoxSim3.cpp  AObstacle.h  ASteerable.cpp  ASteerable.h  AWorld.cpp  AWorld.h  CMakeLists.txt  Readme.md  fireworks.cpp  forces.cpp  main.cpp  unstoppable.cpp
assignments/a2-interpolation/: CMakeLists.txt  Cubic.cpp  Cubic.h  Readme.md  animateCubic.cpp  colorLerp1.cpp  colorLerp2.cpp  drawCubic.cpp  gradient.cpp  particleCubic.cpp  particleLerp.cpp  screensaver.cpp
assignments/a3-splines/: ACurveEditor.cpp  ACurveEditor.h  CMakeLists.txt  Readme.md  curveEditor.cpp  hermiteEx.cpp  solveEqn.cpp  testCatmullRom.cpp  testHermite.cpp
assignments/a4-euler/: ATeapotsViewer.cpp  ATeapotsViewer.h  CMakeLists.txt  Readme.md  teapots.cpp  testEuler.cpp
assignments/a5-quats/: CMakeLists.txt  Readme.md  Ripples.cpp  testQuat.cpp  testQuatMat.cpp
assignments/a6-characters/: AKeyframeCone.cpp  ASkeletonPractice.cpp  ASlerpTeapot.cpp  ATentacle.cpp  CMakeLists.txt  Readme.md  boxes.cpp  testSlerp.cpp  testTransform.cpp
assignments/a7-motion/: AButterfly.cpp  ADevil.h  AFKViewer.cpp  AFKViewer.h  AFancy.cpp  AMotionPractice.cpp  AMrFancy.h  AThriller.cpp  AWASDSimple.cpp  CMakeLists.txt  Readme.md  demo.ogv
assignments/a8-blend/: ABlend.cpp  ACrossfadeMain.cpp  ACrossfadeViewer.cpp  ACrossfadeViewer.h  AReorient.cpp  ASplice.cpp  AZombieArms.cpp  CMakeLists.txt  Readme.md  demo.ogv
assignments/a9-ik/: ACyclops.cpp  ACyclops.h  ADancer.cpp  AIKMain.cpp  AIKSimple.cpp  AIKSimple.h  AIKSimpleMain.cpp  AIKViewer.cpp  AIKViewer.h  ALooker.cpp  CMakeLists.txt  Readme.md
assignments/viewer2d/: CMakeLists.txt  basicMain.cpp
assignments/viewer3d/: CMakeLists.txt  basicMain.cpp
libsrc/animation/: ABVHReader.cpp  ABVHReader.h  AConstants.h  AIKController-basecode.cpp  AIKController.cpp  AIKController.h  AInterpolator-basecode.cpp  AInterpolator.cpp  AInterpolator.h  AJoint-basecode.cpp  AJoint.cpp  AJoint.h  AMatrix3-basecode.cpp  AMatrix3.cpp  AMatrix3.h  AMotion.cpp  AMotion.h  AMotionBlender-basecode.cpp  AMotionBlender.h  APose.cpp  APose.h  AQuatSpline.cpp  AQuatSpline.h  AQuaternion-basecode.cpp  AQuaternion.cpp  AQuaternion.h  ASkeleton.cpp  ASkeleton.h  ASpline.cpp  ASpline.h  ATransform-basecode.cpp  ATransform.cpp  ATransform.h  AVector3.cpp  AVector3.h  AnimationToolkit.h  CMakeLists.txt
libsrc/ui/: AApp.cpp  AApp.h  AApp2D.cpp  AApp2D.h  AApp3D.cpp  AApp3D.h  ACamera.cpp  ACamera.h  AFramework.cpp  AFramework.h  AGLObjects.h  AImage.cpp  AOsUtils.cpp  AOsUtils.h  ASkeletonDrawer.cpp  ASkeletonDrawer.h  ATimer.cpp  ATimer.h  AUiDirBar.cpp  AUiDirBar.h  AUiTimeBar.cpp  AUiTimeBar.h  CMakeLists.txt
