set(LIBS ui animationbasic animationspline animationfk animationik animationblend ${CORE})

#add_subdirectory(viewer2d)
#add_subdirectory(viewer3d)
#add_subdirectory(a0-start)
#add_subdirectory(a1-hello)
#add_subdirectory(a2-interpolation)
add_subdirectory(a3-splines)
#add_subdirectory(a4-euler)
#add_subdirectory(a5-quats)
add_subdirectory(a6-characters)
#add_subdirectory(a7-motion)
#add_subdirectory(a8-blend)
add_subdirectory(a9-ik)
#add_subdirectory(a10-physics)
